--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "android",
+    "firebase",
+    "hooks"
   ],
   "repository": "https://github.com/skillnation/react-native-firebase-hooks",
   "author": "Hanno J. Gödecke <die.drei99@yahoo.de> (https://github.com/skillnation)",
@@ -49,6 +51,11 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-firebase/app": "^13.1.0",
+    "@react-native-firebase/auth": "^13.1.0",
+    "@react-native-firebase/database": "^13.1.0",
+    "@react-native-firebase/firestore": "^13.1.0",
+    "@react-native-firebase/storage": "^13.1.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
@@ -68,6 +75,11 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
+    "@react-native-firebase/app": "*",
+    "@react-native-firebase/auth": "*",
+    "@react-native-firebase/database": "*",
+    "@react-native-firebase/firestore": "*",
+    "@react-native-firebase/storage": "*",
     "react": "*",
     "react-native": "*"
   },
