--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "@skillnation/react-native-firebase-hooks",
   "version": "0.2.1",
   "description": "React Hooks for React Native Firebase",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "typings": "index.d.ts",
+  "source": "src/",
   "files": [
     "src",
     "lib",
