--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skillnation/react-native-firebase-hooks",
-  "version": "0.2.1",
+  "version": "0.3.0-0",
   "description": "React Hooks for React Native Firebase",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
