fix: add other packages

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "android",
     "ios",
     "cpp",
+    "auth",
+    "storage",
+    "database",
+    "firestore",
     "react-native-firebase-hooks.podspec",
     "!lib/typescript/example",
     "!android/build",
