--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,9 @@
     "@react-native-firebase/database": "^14.11.1",
     "@react-native-firebase/firestore": "^14.11.1",
     "@react-native-firebase/storage": "^14.11.1",
+    "@react-navigation/drawer": "^6.4.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
     "expo-splash-screen": "~0.15.1",
@@ -21,6 +24,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
@@ -29,6 +36,9 @@
     "@types/react-native": "~0.66.13",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "private": true
 }
